--- a/public/BCP , Prachinburi.html
+++ b/public/BCP , Prachinburi.html
@@ -128,25 +128,25 @@
                 <div class="single">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-10">
+                            <div class="col-lg-12">
                                  <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Bangchak Petroleum Public  Company Limited</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Bangchak Petroleum Public  Company Limited</p>
                                     <br />
                                     <p>Main Contractor &nbsp; &nbsp;	  : Solartron PCL</p>
                                     <br />
-                                     <p>M&E Subcontractor  &nbsp; &nbsp;	  : Mechatric Co.,Ltd., High Voltage, Low Voltage, MDB, MCC</p>
+                                     <p>M&E Sub&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;: Mechatric Co.,Ltd., High Voltage, Low Voltage, MDB, MCC</p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work</p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work</p>
                                     <br />
-                                    <p>Underground Subcontractor &nbsp; &nbsp;	: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
+                                    <p>Underground Sub &nbsp;: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
                                     <br />
-                                    <p>Location &nbsp; &nbsp;		: Kabinburi, Prachinburi   </p>
+                                    <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		:  Kabinburi, Prachinburi   </p>
                                     <br />
                                     <!-- <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 57.98 Million Baht   </p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;: 57.98 Million Baht     </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2013-2014</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2013-2014</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/Prachinburi1.png">
