--- a/public/ESSILOR.html
+++ b/public/ESSILOR.html
@@ -130,19 +130,19 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="section-header text">
-                                    <p>Owner &nbsp; &nbsp; &nbsp;&nbsp;  : Essilor Manufacturing (Thailand) Co., Ltd.</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Essilor Manufacturing (Thailand) Co., Ltd.</p>
                                     <br />
                                     <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work  </p>
-                                    <!-- <br />
-                                    <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p> -->
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work  </p>
                                     <br />
-                                    <p>Area	&nbsp; &nbsp;	: 1,350 Square Meter</p>
+                                    <!-- <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
+                                    <br /> -->
+                                    <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
                                     <br />
-                                    <p>Project Value &nbsp; &nbsp;	: 13.16 Million Baht      </p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; : 13.16 Million Baht   </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2010-2011</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2010-2011</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/Essilor3.png">
