--- a/public/Future Electrical.html
+++ b/public/Future Electrical.html
@@ -130,19 +130,19 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Future Electrical Control Co., Ltd. (FEC)</p>
+                                     <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Future Electrical Control Co., Ltd. (FEC).</p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
-                                    <p>Scope of Work &nbsp; &nbsp;	: Duct Bank, HDD Work, HV Manhole and HV Pole    </p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Duct Bank, HDD Work, HV Manhole and HV Pole</p>
                                     <br />
-                                    <!-- <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
+                                    <!-- <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br /> -->
-                                    <!-- <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 24 Million Baht    </p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; : 24 Million Baht    </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2020-2021</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;:  2020-2021</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/FE1.png">
