--- a/public/MEA.html
+++ b/public/MEA.html
@@ -128,22 +128,21 @@
                 <div class="single">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-10">
+                            <div class="col-lg-20">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : MEA , Metropolitan Electricity Authority (การไฟฟ้านครหลวง)</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : MEA , Metropolitan Electricity Authority (การไฟฟ้านครหลวง)</p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
-                                    <p>Scope of Work &nbsp; &nbsp;	: Duct Bank, HV Manhole and Substation Building  </p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Duct Bank, HV Manhole and Substation Building</p>
                                     <br />
-                                    <!-- <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
-                                    <br />
-                                    <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <!-- <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 33 Million Baht 
-                                   (Sign contract with MEA by PDC Engineering , our group of company)   </p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
+                                    <br /> -->
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; : 33 Million Baht </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2020-2021 </p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2020-2021</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/MEA1.png">
