--- a/public/TG01.html
+++ b/public/TG01.html
@@ -128,21 +128,21 @@
                 <div class="single">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-10">
+                            <div class="col-lg-15">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   :      มูลนิธิแพทย์สยามบรมราชกุมารี คณะแพทย์มหาวิทยาลัยศรีนครินทรวิโรฒ รังสิต</p>
+                                     <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   :  มูลนิธิแพทย์สยามบรมราชกุมารี คณะแพทย์มหาวิทยาลัยศรีนครินทรวิโรฒ รังสิต</p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
-                                    <p>Scope of Work &nbsp; &nbsp;	: All of EE and ME system works  </p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: All of EE and ME system works</p>
                                     <br />
-                                    <!-- <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
-                                    <br />
-                                    <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <!-- <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 117 Million Baht </p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
+                                    <br /> -->
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; : 117 Million Baht   </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2020-2021 </p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;:  2020-2021</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/TG1.png">
