--- a/public/BCP, Chaiyapum.html
+++ b/public/BCP, Chaiyapum.html
@@ -130,23 +130,23 @@
                         <div class="row">
                             <div class="col-lg-30">
                                  <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Bangchak Petroleum Public  Company Limited</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Bangchak Petroleum Public  Company Limited</p>
                                     <br />
-                                    <p>Main Contractor &nbsp; &nbsp;	  : Solartron PCL </p>
+                                    <p>Main Contractor &nbsp; &nbsp;	  : Solartron PCL</p>
                                     <br />
-                                     <p>M&E Subcontractor  &nbsp; &nbsp;	  : Mechatric Co.,Ltd., High Voltage, Low Voltage, MDB, MCC</p>
+                                     <p>M&E Sub  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;: Mechatric Co.,Ltd., High Voltage, Low Voltage, MDB, MCC</p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection &Lighting Work</p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work</p>
                                     <br />
-                                    <p>Underground Subcontractor &nbsp; &nbsp;	: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
+                                    <p>Underground Sub &nbsp;: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
                                     <br />
-                                    <p>Location &nbsp; &nbsp;		: Bamnejnarong, Chaiyapum  </p>
+                                    <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Bamnejnarong, Chaiyapum </p>
                                     <br />
-                                    <!-- <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 900 Sq.m. </p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 64.97 Million Baht</p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;: 64.97 Million Baht  </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2012-2013</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2012-2013</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/Chaiyaphum1.png">
