--- a/public/Circle.html
+++ b/public/Circle.html
@@ -130,19 +130,19 @@
                         <div class="row">
                             <div class="col-lg-15">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Suwan Ratchapruk Park Co., Ltd.</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Suwan Ratchapruk Park Co., Ltd.</p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
-                                    <p>Scope of Work &nbsp; &nbsp;	: Excavation, Structure and Architecture Work, M&E System</p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Excavation, Structure and Architecture Work, M&E System</p>
                                     <br />
-                                    <!-- <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
+                                    <!-- <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br /> -->
-                                    <!-- <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 59.29 Million Baht (Include M&E Work)  </p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; : 59.29 Million Baht (Include M&E Work)   </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2015-2016</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;:  2015-2016</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/Circle1.png">
