--- a/public/SIG.html
+++ b/public/SIG.html
@@ -130,19 +130,19 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : SIG Combibloc Company Limited </p>
+                                     <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : SIG Combibloc Company Limited </p>
                                     <br />
-                                    <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
+                                    <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
+                                    <br /> -->
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Structure Work, Architecture Work and Services </p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Structure Work, Architecture Work and Services </p>
+                                    <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br />
-                                    <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
+                                    <br /> -->
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; : 23 Million (Include M&E Work)  </p>
                                     <br />
-                                    <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
-                                    <br />
-                                    <p>Project Value &nbsp; &nbsp;	: 23 Million (Include M&E Work)</p>
-                                    <br />
-                                    <p>Year &nbsp; &nbsp;		: 2016-2017</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2016-2017</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/SIG1.png">
