--- a/public/T.C.html
+++ b/public/T.C.html
@@ -130,19 +130,19 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : T.C. Phamaceautical Industries Co.,Ltd.</p>
+                                     <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : T.C. Phamaceautical Industries Co.,Ltd.</p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
-                                    <p>Scope of Work &nbsp; &nbsp;	: Piling and Protection concrete wall</p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Piling and Protection concrete wall</p>
                                     <br />
-                                    <!-- <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
-                                    <br />
-                                    <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <!-- <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 13 Million Baht  </p>
+                                    <!-- <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 1,350 Square Meter</p>
+                                    <br /> -->
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; : 13 Million Baht   </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2020-2021 </p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;:  2020-2021</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/TC1.png">
