--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/home1.png" alt="Carousel Image">
+                        <img src="img/carousel-1.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">We Are Professional</p>
                             <h1 class="animated fadeInLeft">For Your Dream Project</h1>
@@ -127,7 +127,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/home2.jpg" alt="Carousel Image">
+                        <img src="img/carousel-2.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">Professional Builder</p>
                             <h1 class="animated fadeInLeft">We Build Your Home</h1>
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/home3.png" alt="Carousel Image">
+                        <img src="img/carousel-3.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">We Are Trusted</p>
                             <h1 class="animated fadeInLeft">For Your Dream Home</h1>
