--- a/public/Nissan.html
+++ b/public/Nissan.html
@@ -175,7 +175,7 @@
 
 
             <!-- Footer Start -->
-             <div class="footer wow fadeIn" data-wow-delay="0.3s">
+             <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -194,18 +194,18 @@
                                 </div> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
+                        <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +6624432256,+66863884916</p>
+                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
+                        <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <br>
                                 <br>
