--- a/public/index.html
+++ b/public/index.html
@@ -161,18 +161,18 @@
             <div class="feature wow fadeInUp" data-wow-delay="0.1s">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-lg-4 col-md-12">
+                        <div class="col-lg-6 col-md-12">
                             <div class="feature-item">
                                 <div class="feature-icon">
                                     <i class="flaticon-worker"></i>
                                 </div>
                                 <div class="feature-text">
                                     <h3>Expert Worker</h3>
-                                    <p>Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare velit non</p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-12">
+                        <div class="col-lg-6 col-md-12">
                             <div class="feature-item">
                                 <div class="feature-icon">
                                     <i class="flaticon-building"></i>
@@ -183,7 +183,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-12">
+                        <!-- <div class="col-lg-4 col-md-12">
                             <div class="feature-item">
                                 <div class="feature-icon">
                                     <i class="flaticon-call"></i>
@@ -193,7 +193,7 @@
                                     <p>Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare velit non</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -738,7 +738,7 @@
                             </ul>
                         </div>
                     </div> -->
-                     <div class="row portfolio-container">
+                    <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
@@ -790,12 +790,23 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                           <div class="port-text">
+                                <a class="btn" href="portfolio.html">See More</a>
+                           </div>
+                        </div>
+                    </div>
+                 
+                </div>
+            </div>
                 
                 </div>
             </div>
 
             <!-- Footer Start -->
-            <div class="footer wow fadeIn" data-wow-delay="0.3s">
+            <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -814,24 +825,24 @@
                                 </div> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-link">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +6624432256,+66863884916</p>
+                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;&nbsp;+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-link">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-envelope"></i>  wuttisit.atc@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
