--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -478,7 +478,7 @@
 
 
             <!-- Footer Start -->
-                <div class="footer wow fadeIn" data-wow-delay="0.3s">
+                <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -503,7 +503,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +6624432256,+66863884916</p>
+                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
@@ -514,7 +514,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-envelope"></i>  wuttisit.atc@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
