--- a/public/BCP, Chaiyapum.html
+++ b/public/BCP, Chaiyapum.html
@@ -168,7 +168,7 @@
 
 
             <!-- Footer Start -->
-             <div class="footer wow fadeIn" data-wow-delay="0.5s">
+            <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -188,23 +188,23 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-link">
+                            <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;+668 6388 4916</p>
+                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;&nbsp;+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-link">
+                            <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-envelope"></i>  wuttisit.atc@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
