--- a/public/index.html
+++ b/public/index.html
@@ -115,31 +115,41 @@
                     <li data-target="#carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel" data-slide-to="1"></li>
                     <li data-target="#carousel" data-slide-to="2"></li>
+                    <li data-target="#carousel" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/carousel-1.jpg" alt="Carousel Image">
+                        <img src="img/home1.JPG" alt="Carousel Image">
                         <div class="carousel-caption">
-                            <p class="animated fadeInRight">We Are Professional</p>
-                            <h1 class="animated fadeInLeft">For Your Dream Project</h1>
+                            <p class="animated fadeInRight">High-Quality work</p>
+                            <h1 class="animated fadeInLeft">with teachnology and On-time delivery is our key to success</h1>
                             <a class="btn animated fadeInUp" href="portfolio.html">Our Projects</a>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/carousel-2.jpg" alt="Carousel Image">
+                        <img src="img/home2.JPG" alt="Carousel Image">
                         <div class="carousel-caption">
-                            <p class="animated fadeInRight">Professional Builder</p>
-                            <h1 class="animated fadeInLeft">We Build Your Home</h1>
+                            <!-- <p class="animated fadeInRight">Professional Builder</p>
+                            <h1 class="animated fadeInLeft">We Build Your Home</h1> -->
                             <a class="btn animated fadeInUp" href="portfolio.html">Our Projects</a>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/carousel-3.jpg" alt="Carousel Image">
+                        <img src="img/home3.JPG" alt="Carousel Image">
                         <div class="carousel-caption">
-                            <p class="animated fadeInRight">We Are Trusted</p>
-                            <h1 class="animated fadeInLeft">For Your Dream Home</h1>
+                            <p class="animated fadeInRight">The driving force</p>
+                            <h1 class="animated fadeInLeft">of our organization is our talented people and teamwork</h1>
+                            <a class="btn animated fadeInUp" href="portfolio.html">Our Projects</a>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="img/home4.JPG" alt="Carousel Image">
+                        <div class="carousel-caption">
+                            <!-- <p class="animated fadeInRight">We Are Trusted</p>
+                            <h1 class="animated fadeInLeft">For Your Dream Home</h1> -->
                             <a class="btn animated fadeInUp" href="portfolio.html">Our Projects</a>
                         </div>
                     </div>
@@ -164,22 +174,23 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="feature-item">
                                 <div class="feature-icon">
-                                    <i class="flaticon-worker"></i>
-                                </div>
-                                <div class="feature-text">
-                                    <h3>Expert Worker</h3>
-                                    <p></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-12">
-                            <div class="feature-item">
-                                <div class="feature-icon">
                                     <i class="flaticon-building"></i>
                                 </div>
                                 <div class="feature-text">
                                     <h3>Quality Work</h3>
-                                    <p>Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare velit non</p>
+                                    <p>Our work is full of quality and efficiency. We will do our best to complete your work.</p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-lg-6 col-md-12">
+                            <div class="feature-item">
+                                <div class="feature-icon">
+                                    <i class="flaticon-worker"></i>
+                                </div>
+                                <div class="feature-text">
+                                    <h3>Quality workers</h3>
+                                    <p>We have expert workers to do our work with quality and done it on-time</p>
                                 </div>
                             </div>
                         </div>
@@ -738,21 +749,19 @@
                             </ul>
                         </div>
                     </div> -->
-                    <div class="row portfolio-container">
+                   <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/portfolio-1.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tort
-                                            
-                                            or, auctor id gravi condime, viverra quis sem.
+                                           New Raw Material Warehouse , Monde Nissin
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Mondae Nissin</h3>
+                                    <h3>New Raw Material Warehouse</h3>
                                     <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
@@ -760,7 +769,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-2.jpg" alt="Image">
+                                    <img src="img/UN4.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)
@@ -776,7 +785,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-3.jpg" alt="Image">
+                                    <img src="img/TG4.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            โครงการก่อสร้างอาคารผู้ป่วยนอก <br>(M&E System Work)
