--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.8s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/FE4.jpg" alt="Image">
@@ -478,7 +478,7 @@
 
 
             <!-- Footer Start -->
-                <div class="footer wow fadeIn" data-wow-delay="0.5s">
+             <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -497,19 +497,19 @@
                                 </div> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-link">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;+668 6388 4916</p>
+                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;&nbsp;+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-link">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
