--- a/public/about.html
+++ b/public/about.html
@@ -137,7 +137,7 @@
                         <div class="col-lg-7 col-md-6">
                             <div class="section-header text-left">
                                 <p>Welcome to ActiveCon</p>
-                                <h2>13 Years Experience</h2>
+                                <h2>13 Year Experiences</h2>
                             </div>
                             <div class="about-text">
                                 <p>
