--- a/public/BCP , Buriram.html
+++ b/public/BCP , Buriram.html
@@ -155,7 +155,15 @@
                                 <br /><br />
                                 <img src="img/Burirum3.png">
                                 <br /><br />
-                        </div>       
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>              
                     </div>    
                 </div> 
             <!-- Single Post End-->   
