--- a/public/TG01.html
+++ b/public/TG01.html
@@ -151,6 +151,14 @@
                                 <br /><br />
                                 <img src="img/TG3.png">
                             </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
                         </div>       
                     </div>    
                 </div> 
