--- a/public/BCP , Ayutthaya.html
+++ b/public/BCP , Ayutthaya.html
@@ -156,7 +156,14 @@
                                 <img src="img/Ayutthaya3.png">
                                 
                             </div>
-                        </div>       
+                        </div>   
+                         <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>           
                     </div>    
                 </div> 
                      
