--- a/public/BCP , Prachinburi.html
+++ b/public/BCP , Prachinburi.html
@@ -154,8 +154,15 @@
                                 <img src="img/Prachinburi2.png">
                                 <br /><br />
                                 <img src="img/Prachinburi3.png">
-                                
-                        </div>       
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>              
                     </div>    
                 </div> 
                      
