--- a/public/Circle.html
+++ b/public/Circle.html
@@ -159,7 +159,14 @@
                                 <br /><br />
                                 <img src="img/Circle7.png">
                             </div>
-                        </div>       
+                        </div>
+                         <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>              
                     </div>    
                 </div> 
                      
