--- a/public/MEA.html
+++ b/public/MEA.html
@@ -152,7 +152,14 @@
                                 <img src="img/MEA3.png">
                                 
                             </div>
-                        </div>       
+                        </div>
+                         <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>              
                     </div>    
                 </div> 
                      
