--- a/public/MEA2.html
+++ b/public/MEA2.html
@@ -150,7 +150,14 @@
                                 <img src="img/MEA5.png">
                                 
                             </div>
-                        </div>       
+                        </div> 
+                         <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>             
                     </div>    
                 </div> 
                      
