--- a/public/MN01.html
+++ b/public/MN01.html
@@ -167,7 +167,14 @@
                                 <br /><br />
                                 <img src="img/Nissan11.png">
                             </div>
-                        </div>       
+                        </div>
+                         <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>              
                     </div>    
                 </div> 
                      
