--- a/public/T.C.html
+++ b/public/T.C.html
@@ -151,7 +151,14 @@
                                 <br /><br />
                                 
                             </div>
-                        </div>       
+                        </div> 
+                         <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="sin-text">
+                                        <a class="btn" href="portfolio.html">See More</a>
+                                </div>
+                            </div>
+                        </div>             
                     </div>    
                 </div> 
                      
