--- a/public/BCP, Chaiyapum.html
+++ b/public/BCP, Chaiyapum.html
@@ -156,8 +156,9 @@
                                 <img src="img/Chaiyaphum3.png">
                                 
                             </div>
-                            
-                         <div class="row">
+                        </div>
+                        <br>
+                        <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="sin-text">
                                         <a class="btn" href="portfolio.html">See More</a>
