--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h3>Quality workers</h3>
-                                    <p>We have expert workers to do our work with quality and done it on-time</p>
+                                    <p>We have expert workers to do our work with professional skill and done it on-time</p>
                                 </div>
                             </div>
                         </div>
