--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
                                     <i class="flaticon-worker"></i>
                                 </div>
                                 <div class="feature-text">
-                                    <h3>Quality workers</h3>
+                                    <h3>Quality Workers</h3>
                                     <p>We have expert workers to do our work with professional skill and done it on-time</p>
                                 </div>
                             </div>
