--- a/public/index.html
+++ b/public/index.html
@@ -818,7 +818,7 @@
             <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6 col-lg-3">
+                        <div class="col-md-8 col-lg-5">
                             <div class="footer-contact">
                                 <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
@@ -834,6 +834,7 @@
                                 </div> -->
                             </div>
                         </div>
+                         &nbsp; &nbsp; &nbsp;&nbsp;
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-contact">
                                 <br>
