--- a/public/index.html
+++ b/public/index.html
@@ -756,7 +756,7 @@
                                     <img src="img/portfolio-1.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                           New Raw Material Warehouse , Monde Nissin
+                                           New Warehouse , Monde Nissin
                                         </p>
                                     </div>
                                 </div>
@@ -777,7 +777,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Orange Line Metropolitan</h3>
+                                    <h3>Orange Line MRT station</h3>
                                     <a class="btn" href="UN01.html" >+</a>
                                 </div>
                             </div>
@@ -818,7 +818,7 @@
             <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-8 col-lg-5">
+                        <div class="col-md-6 col-lg-5">
                             <div class="footer-contact">
                                 <h1>ActiveCon Co.,Ltd.</h1>
                                 <h2>Office Contact</h2>
