--- a/public/BCP, Chaiyapum.html
+++ b/public/BCP, Chaiyapum.html
@@ -161,7 +161,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="sin-text">
-                                        <a class="btn" href="portfolio.html">See More</a>
+                                        <a class="btn" href="portfolio.html">Back</a>
                                 </div>
                             </div>
                         </div>              
