--- a/public/index.html
+++ b/public/index.html
@@ -186,10 +186,10 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="feature-item">
                                 <div class="feature-icon">
-                                    <i class="flaticon-worker"></i>
+                                    <i class="flaticon-calendar"></i>
                                 </div>
                                 <div class="feature-text">
-                                    <h3>Quality Workers</h3>
+                                    <h3>On-time Delivery</h3>
                                     <p>We have expert workers to do our work with professional skill and done it on-time</p>
                                 </div>
                             </div>
@@ -227,7 +227,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    ActiveCon Co.,Ltd. was found on 25th  of May 2009 with the registered capital of 3 million baht to serve all clients for turn-key projects of most Construction Work mainly for factories, buildings, concrete slap/road and land development. We are also capable of serving M&E System Work for both industries and buildings. In 2015,  <b>company had a capital increase to 30 million baht</b>.
+                                    ActiveCon Co.,Ltd. was found on 25th of May 2009 with the registered capital of 3 million baht to serve all clients for turn-key projects of most Construction Work mainly for factories, buildings, concrete slap/road and land development. We are also capable of serving M&E System Work for both industries and buildings. In 2015,<b><i>company had a capital increase to 30 million baht</i></b>.
                                 </p>
                                 <p>
                                     ActiveCon is run under professional experienced engineers who passed lots of construction projects which were successful and be memorized by all owners. Most of these successful projects were completed under high quality of work within the expected schedule together with satisfied after sales service .This concept is ActiveCon’s standard of work in the construction business.  
@@ -811,8 +811,8 @@
                 </div>
             </div>
                 
-                </div>
-            </div>
+        </div>
+        
 
             <!-- Footer Start -->
             <div class="footer wow fadeIn" data-wow-delay="0.5s">
@@ -822,7 +822,8 @@
                             <div class="footer-contact">
                                 <h1>ActiveCon Co.,Ltd.</h1>
                                 <h2>Office Contact</h2>
-                                <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
+                                <p><i class="fa fa-map-marker-alt"></i>Location</p>
+                                <address>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong,<br> Bangkruai, Nonthaburi 11130</address>
                                 <!-- <s>+6624432256,+66863884916</s>
                                 <s>wuttisit.atc@gmail.com</s> -->
                                 <!-- <div class="footer-social">
@@ -834,25 +835,28 @@
                                 </div> -->
                             </div>
                         </div>
-                         &nbsp; &nbsp; &nbsp;&nbsp;
-                        <div class="col-md-4 col-lg-3">
+                         &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;
+                        <div class="col-md-8 col-lg-3">
                             <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;&nbsp;+668 6388 4916</p>
+                                <p><i class="fa fa-phone-alt"></i>Telephone</p>
+                                <p>+66 2443 2256 <br>+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                         &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+                        <div class="col-md-8 col-lg-3">
                             <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>E-mail</p>
+                                <p></i>wuttisit.atc@gmail.com</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
