--- a/public/MN01.html
+++ b/public/MN01.html
@@ -190,11 +190,12 @@
             <div class="footer wow fadeIn" data-wow-delay="0.5s">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6 col-lg-3">
+                        <div class="col-md-6 col-lg-5">
                             <div class="footer-contact">
-                                <h1>ActiveCon Co., Ltd.</h1>
+                                <h1>ActiveCon Co.,Ltd.</h1>
                                 <h2>Office Contact</h2>
-                                <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
+                                <p><i class="fa fa-map-marker-alt"></i>Location</p>
+                                <address>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong,<br> Bangkruai, Nonthaburi 11130</address>
                                 <!-- <s>+6624432256,+66863884916</s>
                                 <s>wuttisit.atc@gmail.com</s> -->
                                 <!-- <div class="footer-social">
@@ -206,24 +207,28 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                         &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;
+                        <div class="col-md-8 col-lg-3">
                             <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-phone-alt"></i> +66 2443 2256 <br> &nbsp; &nbsp; &nbsp;&nbsp;+668 6388 4916</p>
+                                <p><i class="fa fa-phone-alt"></i>Telephone</p>
+                                <p>+66 2443 2256 <br>+668 6388 4916</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                         &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+                        <div class="col-md-8 col-lg-3">
                             <div class="footer-contact">
                                 <br>
                                 <br>
                                 <br>
                                 <br>
-                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>E-mail</p>
+                                <p></i>wuttisit.atc@gmail.com</p>
                                 <!-- <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a> -->
                             </div>
